<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="7dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">
...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fav_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:contentDescription="TODO"
                android:focusable="true"
...
