<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list_event_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragment.ListEventFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_event_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_list_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <include layout="@layout/event_list_imitate" />

            <include layout="@layout/event_list_imitate" />

            <include layout="@layout/event_list_imitate" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</LinearLayout>