<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".layout.activity.MainActivity">

    <SearchView
        android:id="@+id/searchViewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/masukkan_team_atau_event_lalu_enter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerListLeague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true"
        app:shimmer_duration="800">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/league_list_imitate" />

            <include layout="@layout/league_list_imitate" />

            <include layout="@layout/league_list_imitate" />

            <include layout="@layout/league_list_imitate" />

            <include layout="@layout/league_list_imitate" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

</LinearLayout>